//! gRPC client for connecting to platform
//!
//! This module provides the scanner client for communicating with
//! the ForgeScan platform. It handles:
//! - Connecting to the platform with mTLS
//! - Receiving scan tasks
//! - Streaming scan events (findings, progress, errors)
//! - Sending heartbeats

use std::sync::Arc;
use std::time::Duration;
use tokio::sync::mpsc;
use tracing::{debug, error, info, warn};

use crate::types::*;

/// Configuration for the scanner client
#[derive(Debug, Clone)]
pub struct ClientConfig {
    /// Platform gRPC endpoint
    pub endpoint: String,
    /// Scanner ID (assigned by platform)
    pub scanner_id: String,
    /// Connect timeout
    pub connect_timeout: Duration,
    /// Request timeout
    pub request_timeout: Duration,
    /// TLS configuration
    pub tls: Option<TlsConfig>,
    /// Heartbeat interval
    pub heartbeat_interval: Duration,
}

impl Default for ClientConfig {
    fn default() -> Self {
        Self {
            endpoint: "https://localhost:8443".to_string(),
            scanner_id: String::new(),
            connect_timeout: Duration::from_secs(10),
            request_timeout: Duration::from_secs(30),
            tls: None,
            heartbeat_interval: Duration::from_secs(300),
        }
    }
}

/// TLS configuration for mTLS
#[derive(Debug, Clone)]
pub struct TlsConfig {
    /// CA certificate path
    pub ca_cert_path: String,
    /// Client certificate path
    pub cert_path: String,
    /// Client key path
    pub key_path: String,
}

/// Scanner client for platform communication
pub struct ScannerClient {
    config: ClientConfig,
    /// Sender for outgoing events
    event_tx: Option<mpsc::Sender<ScanEvent>>,
}

impl ScannerClient {
    /// Create a new scanner client
    pub fn new(config: ClientConfig) -> Self {
        Self {
            config,
            event_tx: None,
        }
    }

    /// Connect to the platform
    ///
    /// Note: This is a placeholder. Full implementation requires tonic client.
    pub async fn connect(&mut self) -> Result<(), ClientError> {
        info!("Connecting to platform at {}", self.config.endpoint);

        // TODO: Implement actual gRPC connection with tonic
        // let channel = Channel::from_shared(self.config.endpoint.clone())?
        //     .connect_timeout(self.config.connect_timeout)
        //     .timeout(self.config.request_timeout);
        //
        // if let Some(tls) = &self.config.tls {
        //     let ca = std::fs::read(&tls.ca_cert_path)?;
        //     let cert = std::fs::read(&tls.cert_path)?;
        //     let key = std::fs::read(&tls.key_path)?;
        //     channel = channel.tls_config(
        //         ClientTlsConfig::new()
        //             .ca_certificate(Certificate::from_pem(ca))
        //             .identity(Identity::from_pem(cert, key))
        //     )?;
        // }
        //
        // self.client = Some(ScanServiceClient::connect(channel).await?);

        info!("Connected to platform");
        Ok(())
    }

    /// Start the heartbeat loop
    pub async fn start_heartbeat(&self) -> tokio::task::JoinHandle<()> {
        let config = self.config.clone();

        tokio::spawn(async move {
            let mut interval = tokio::time::interval(config.heartbeat_interval);

            loop {
                interval.tick().await;

                let request = HeartbeatRequest {
                    scanner_id: config.scanner_id.clone(),
                    hostname: gethostname().to_string_lossy().to_string(),
                    version: env!("CARGO_PKG_VERSION").to_string(),
                    status: ScannerStatus {
                        state: ScannerState::Idle,
                        queue_depth: 0,
                        active_scans: 0,
                    },
                    active_task_ids: Vec::new(),
                    resources: ResourceUsage::default(),
                };

                debug!("Sending heartbeat");
                // TODO: Send actual heartbeat via gRPC
                // if let Some(client) = &self.client {
                //     match client.heartbeat(request).await {
                //         Ok(response) => { ... }
                //         Err(e) => warn!("Heartbeat failed: {}", e),
                //     }
                // }
            }
        })
    }

    /// Get next scan task from platform
    pub async fn get_task(&self) -> Result<Option<ScanTask>, ClientError> {
        // TODO: Implement actual task retrieval
        // This would typically be a streaming RPC or long-poll
        Ok(None)
    }

    /// Send a scan event to the platform
    pub async fn send_event(&self, event: ScanEvent) -> Result<(), ClientError> {
        if let Some(tx) = &self.event_tx {
            tx.send(event).await.map_err(|_| ClientError::ChannelClosed)?;
        }
        Ok(())
    }

    /// Send a finding to the platform
    pub async fn send_finding(&self, finding: forgescan_core::Finding) -> Result<(), ClientError> {
        self.send_event(ScanEvent::Finding(finding)).await
    }

    /// Send progress update
    pub async fn send_progress(&self, progress: ScanProgress) -> Result<(), ClientError> {
        self.send_event(ScanEvent::Progress(progress)).await
    }

    /// Send scan completion
    pub async fn send_complete(&self, complete: ScanComplete) -> Result<(), ClientError> {
        self.send_event(ScanEvent::Complete(complete)).await
    }

    /// Upload batch results (for offline mode)
    pub async fn upload_results(&self, findings: Vec<forgescan_core::Finding>) -> Result<u32, ClientError> {
        info!("Uploading {} findings", findings.len());
        // TODO: Implement batch upload
        Ok(findings.len() as u32)
    }

    /// Get scanner configuration from platform
    pub async fn get_config(&self) -> Result<ScannerConfig, ClientError> {
        // TODO: Implement config retrieval
        Ok(ScannerConfig::default())
    }
}

/// Client errors
#[derive(Debug, thiserror::Error)]
pub enum ClientError {
    #[error("Connection failed: {0}")]
    ConnectionFailed(String),

    #[error("Request timeout")]
    Timeout,

    #[error("Authentication failed")]
    AuthenticationFailed,

    #[error("TLS error: {0}")]
    TlsError(String),

    #[error("Channel closed")]
    ChannelClosed,

    #[error("gRPC error: {0}")]
    GrpcError(String),

    #[error("IO error: {0}")]
    IoError(#[from] std::io::Error),
}

fn gethostname() -> std::ffi::OsString {
    #[cfg(unix)]
    {
        use std::ffi::CStr;
        let mut buf = [0i8; 256];
        unsafe {
            libc::gethostname(buf.as_mut_ptr(), buf.len());
            CStr::from_ptr(buf.as_ptr()).to_owned().into()
        }
    }
    #[cfg(windows)]
    {
        std::env::var_os("COMPUTERNAME").unwrap_or_else(|| "unknown".into())
    }
    #[cfg(not(any(unix, windows)))]
    {
        "unknown".into()
    }
}
